trying custom login and register without oauth
