# routes/users.js
@@ -1,18 +1,22 @@
 //...This is the routes/users.js file...
 
+
 const express = require('express');
 const router = express.Router();
 const usersController = require('../controllers/users');
 const { isAuthenticated } = require('../middleware/authenticate');
 
-// Retrieve all  user profiles
+// Retrieve all user profiles
 router.get('/', usersController.getAllUsers);
 
 // Retrieve user profile information by ID
 router.get('/:id', usersController.getUserById);
 
 // Create a new user profile
-router.post('/', usersController.createUser);
+router.post('/register', usersController.registerUser);
+
+// Login user
+router.post('/login', usersController.loginUser);
 
 // Update user profile information by user ID
 router.put('/:id', isAuthenticated, usersController.updateUserById);
