# swagger.json
@@ -12,184 +12,277 @@
   ],
   "paths": {
     "/users/": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Retrieve all user profiles",
-        "description": "This endpoint retrieves all user profiles.",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "tags": ["users"],
-        "summary": "Create user profile",
-        "description": "This endpoint creates a new user profile.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "user_id": {
-                  "type": "string",
-                  "example": "12345"
-                },
-                "username": {
-                  "type": "string",
-                  "example": "johndoe"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "1234"
-                },
-                "first_name": {
-                  "type": "string",
-                  "example": "John"
-                },
-                "last_name": {
-                  "type": "string",
-                  "example": "Doe"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "john.doe@example.com"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+    "get": {
+      "tags": ["users"],
+      "summary": "Retrieve all user profiles",
+      "description": "This endpoint retrieves all user profiles.",
+      "produces": ["application/json"],
+      "responses": {
+        "200": {
+          "description": "OK"
+        },
+        "500": {
+          "description": "Internal Server Error"
         }
       }
     },
-    "/users/{id}": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Get single profile",
-        "description": "This endpoint retrieves a single user profile based on the id.",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "tags": ["users"],
-        "summary": "Update a user profile",
-        "description": "This endpoint updates a user profile based on the user id.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "user_id": {
-                  "type": "string",
-                  "example": "12345"
-                },
-                "username": {
-                  "type": "string",
-                  "example": "johndoe"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "1234"
-                },
-                "first_name": {
-                  "type": "string",
-                  "example": "John"
-                },
-                "last_name": {
-                  "type": "string",
-                  "example": "Doe"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "john.doe@example.com"
-                }
+    "post": {
+      "tags": ["users"],
+      "summary": "Create user profile",
+      "description": "This endpoint creates a new user profile.",
+      "parameters": [
+        {
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "user_id": {
+                "type": "string",
+                "example": "12345"
+              },
+              "username": {
+                "type": "string",
+                "example": "johndoe"
+              },
+              "password": {
+                "type": "string",
+                "example": "1234"
+              },
+              "first_name": {
+                "type": "string",
+                "example": "John"
+              },
+              "last_name": {
+                "type": "string",
+                "example": "Doe"
+              },
+              "email": {
+                "type": "string",
+                "example": "john.doe@example.com"
               }
             }
           }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
         }
-      },
-      "delete": {
-        "tags": ["users"],
-        "summary": "Delete a user profile",
-        "description": "This endpoint deletes a user profile based on the user id.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+      ],
+      "responses": {
+        "201": {
+          "description": "Created"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
+  "/users/{id}": {
+    "get": {
+      "tags": ["users"],
+      "summary": "Get single profile",
+      "description": "This endpoint retrieves a single user profile based on the id.",
+      "produces": ["application/json"],
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "responses": {
+        "200": {
+          "description": "OK"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "404": {
+          "description": "Not Found"
+        },
+        "500": {
+          "description": "Internal Server Error"
         }
       }
     },
+    "put": {
+      "tags": ["users"],
+      "summary": "Update a user profile",
+      "description": "This endpoint updates a user profile based on the user id.",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        },
+        {
+          "name": "body",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "properties": {
+              "user_id": {
+                "type": "string",
+                "example": "12345"
+              },
+              "username": {
+                "type": "string",
+                "example": "johndoe"
+              },
+              "password": {
+                "type": "string",
+                "example": "1234"
+              },
+              "first_name": {
+                "type": "string",
+                "example": "John"
+              },
+              "last_name": {
+                "type": "string",
+                "example": "Doe"
+              },
+              "email": {
+                "type": "string",
+                "example": "john.doe@example.com"
+              }
+            }
+          }
+        }
+      ],
+      "responses": {
+        "204": {
+          "description": "No Content"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    },
+    "delete": {
+      "tags": ["users"],
+      "summary": "Delete a user profile",
+      "description": "This endpoint deletes a user profile based on the user id.",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "responses": {
+        "204": {
+          "description": "No Content"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
+  "/users/register": {
+    "post": {
+      "tags": ["users"],
+      "summary": "Register a new user",
+      "description": "This endpoint registers a new user.",
+      "parameters": [
+        {
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "username": {
+                "type": "string",
+                "example": "johndoe"
+              },
+              "password": {
+                "type": "string",
+                "example": "1234"
+              },
+              "first_name": {
+                "type": "string",
+                "example": "John"
+              },
+              "last_name": {
+                "type": "string",
+                "example": "Doe"
+              },
+              "email": {
+                "type": "string",
+                "example": "john.doe@example.com"
+              }
+            },
+            "required": ["username", "password", "first_name", "last_name", "email"]
+          }
+        }
+      ],
+      "responses": {
+        "201": {
+          "description": "User successfully registered"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
+  "/users/login": {
+    "post": {
+      "tags": ["users"],
+      "summary": "Login to the application",
+      "description": "This endpoint allows users to log in.",
+      "parameters": [
+        {
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "username": {
+                "type": "string",
+                "example": "johndoe"
+              },
+              "password": {
+                "type": "string",
+                "example": "1234"
+              }
+            },
+            "required": ["username", "password"]
+          }
+        }
+      ],
+      "responses": {
+        "200": {
+          "description": "Login successful"
+        },
+        "401": {
+          "description": "Unauthorized"
+        },
+        "404": {
+          "description": "User not found"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
     "/inspirations/": {
       "get": {
         "tags": ["inspirations"],
